Update authentication #4